src/main/kubernetes/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rds-teste
  namespace: imoveis
  labels:
    app: rds-teste
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rds-teste
  template:
    metadata:
      labels:
        app: rds-teste
    spec:
      containers:
      - image: ailtonmsj/amazon-rds-quickstart:1.0.2
        name: rds
        imagePullPolicy: Always
        resources: {}
