src/main/kubernetes/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rds-teste
  namespace: imoveis
  labels:
    app: rds-teste
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: rds-teste
