src/main/kubernetes/05-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rds-teste-vs
  namespace: imoveis
spec:
  gateways:
  - rds-teste-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /fruits
    route:
    - destination:
        host: rds-teste
        port:
          number: 8080
